compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test2-7.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 144
expression: "type Null { Null } fn x() { Null }"
---
-module(the_app).
-compile(no_auto_import).

-export_type([null/0]).

-type null() :: null.

-spec x() -> null().
x() ->
    null.

