compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test21.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn go(a) {\n  let a = 1\n  a\n}\n\n                    "
---
----- SOURCE CODE

pub fn go(a) {
  let a = 1
  a
}

                    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(any()) -> integer().
go(A) ->
    A@1 = 1,
    A@1.
