compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test3-2.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 154
expression: "type Point { Point(x: Int, y: Int) }\n                fn x() { Point(x: 4, y: 6) Point(y: 1, x: 9) }"
---
-module(the_app).
-compile(no_auto_import).

-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-spec x() -> point().
x() ->
    {point, 4, 6},
    {point, 9, 1}.

