compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test3-3.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 159
expression: "type Point { Point(x: Int, y: Int) } fn x(y) { let Point(a, b) = y a }"
---
-module(the_app).
-compile(no_auto_import).

-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-spec x(point()) -> integer().
x(Y) ->
    {point, A, B} = Y,
    A.

